[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "problemforge"
version = "0.1.0"
description = "Native GTK4 desktop app for Pop!_OS — supports a career-development system based on 5 timeless engineering themes, with focus on problem-sensing (problems.md journal)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "acailic"},
]
keywords = ["gtk4", "libadwaita", "pop-os", "career", "problem-sensing", "engineering", "journal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = [
    "PyGObject>=3.42,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
]

[project.scripts]
problemforge = "problemforge.main:__main__"

[project.urls]
Homepage = "https://github.com/acailic/problemforge"
Issues = "https://github.com/acailic/problemforge/issues"

[tool.setuptools.packages.find]
include = ["problemforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
